--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,9 +20,9 @@ IF("${PROJECT_SOURCE_DIR}" STREQUAL "${PROJECT_BINARY_DIR}")
   MESSAGE(SEND_ERROR "In-source builds are not allowed, please build this in the bin directory!")
 ENDIF("${PROJECT_SOURCE_DIR}" STREQUAL "${PROJECT_BINARY_DIR}")
 
-#set(CMAKE_BUILD_TYPE Debug) # uncomment this when you need a debug build
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
-SET(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -O3")
+set(CMAKE_BUILD_TYPE Debug) # uncomment this when you need a debug build
+#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
+#SET(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -O3")
 
 INCLUDE_DIRECTORIES(src)
 
