updated cmake file to be release mode with -O3 optimizations

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
-set(CMAKE_BUILD_TYPE Debug) # uncomment this when you need a debug build
-#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
-#SET(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -O3")
+#set(CMAKE_BUILD_TYPE Debug) # uncomment this when you need a debug build
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
+SET(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -O3")
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 if (NOT "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang") # clang Doesnt use pthread
@@ -21,3 +21,5 @@ add_library(rufus_src_lib
   )
 
 SET(RUFUS_SRC_LIB rufus_src_lib CACHE STRING "THE SOURCE LIBRARY") #add rufus_src and rufus_utils to the list of core libs
+
+add_dependencies(rufus_src_lib ${CXXOPTS_PROJECT} ${RUFUS_SRC_LIB})
